Vercel linki hata düzeltildi.